--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "three": "^0.121.1",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -25,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
