--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
+    "react-toastify": "^10.0.3",
     "three": "^0.121.1",
     "vanta": "^0.5.24"
   },
