--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@iconify/react": "^4.1.1",
+    "@material/typography": "^14.0.0",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -28,6 +30,7 @@
     "react-toastify": "^10.0.3",
     "simplebar-react": "^3.2.4",
     "three": "^0.121.1",
+    "typography": "^0.16.24",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
