--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.1",
     "@iconify/react": "^4.1.1",
     "@material/typography": "^14.0.0",
+    "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
