--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
@@ -28,8 +29,12 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-slick": "^0.30.1",
     "react-toastify": "^10.0.3",
+    "reactstrap": "^9.2.2",
+    "remixicon": "^4.1.0",
     "simplebar-react": "^3.2.4",
+    "slick-carousel": "^1.8.1",
     "three": "^0.121.1",
     "typography": "^0.16.24",
     "vanta": "^0.5.24"
