--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.3",
