--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
     "react-responsive-masonry": "^2.2.0",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.3",
     "reactstrap": "^9.2.2",
     "remixicon": "^4.1.0",
