--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@material/typography": "^14.0.0",
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.13",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
